chains/tempo-old/build_err_solc.txt
    Checking svm-rs-builds v0.2.3
    Checking ethers v2.0.14
error[E0428]: the name `SOLC_VERSION_0_8_31` is defined multiple times
   --> C:\My Script\testnet-framework\target\debug\build\svm-rs-builds-662aeeb0b0e7a952\out/builds.rs:193:1
    |
191 | pub const SOLC_VERSION_0_8_31: semver::Version = semver::Version::new(0,8,31);
    | ------------------------------------------------------------------------------ previous definition of the value `SOLC_VERSION_0_8_31` here
192 | pub const SOLC_VERSION_0_8_31_CHECKSUM: &str = "3e7058cc174778c81788f3901c1cbf632043a1bde757c849634d62cf1c44df2a";
193 | pub const SOLC_VERSION_0_8_31: semver::Version = semver::Version::new(0,8,31);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SOLC_VERSION_0_8_31` redefined here
    |
    = note: `SOLC_VERSION_0_8_31` must be defined only once in the value namespace of this module

error[E0428]: the name `SOLC_VERSION_0_8_31_CHECKSUM` is defined multiple times
   --> C:\My Script\testnet-framework\target\debug\build\svm-rs-builds-662aeeb0b0e7a952\out/builds.rs:194:1
    |
192 | pub const SOLC_VERSION_0_8_31_CHECKSUM: &str = "3e7058cc174778c81788f3901c1cbf632043a1bde757c849634d62cf1c44df2a";
    | ------------------------------------------------------------------------------------------------------------------ previous definition of the value `SOLC_VERSION_0_8_31_CHECKSUM` here
193 | pub const SOLC_VERSION_0_8_31: semver::Version = semver::Version::new(0,8,31);
194 | pub const SOLC_VERSION_0_8_31_CHECKSUM: &str = "d8880cf29e58f695269569c338219b8a67543b9f8d5edbd0f0d6f929f172173d";
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SOLC_VERSION_0_8_31_CHECKSUM` redefined here
    |
    = note: `SOLC_VERSION_0_8_31_CHECKSUM` must be defined only once in the value namespace of this module

For more information about this error, try `rustc --explain E0428`.
error: could not compile `svm-rs-builds` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
